[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frm"
version = "0.0.3"
authors = [
  { name="Shasa Foster", email="shasa.foster@gmail.com" },
]
description = "A python package for quantitative finance and derivative pricing"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[           
    "holidays",
    "matplotlib",	
    "numba",
    "numpy",
    "pandas",	
    "pandas_market_calendars",
    "PrettyTable",
    "pytest",
    "scipy",
      ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",  
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/frmcalcs/frm"
"Website" = "https://www.frmcalcs.com"

# Hatchling-specific configuration to ensure the correct files are included in the wheel
[tool.hatch.build.targets.wheel]
packages = ["frm"]  # Replace with the correct directory if your package isn't directly under 'frm'

# Specify which files to include in the build
[tool.hatch.build]
include = ["frm/**", "README.md"]  # Adjust this to include relevant files

# Exclude unnecessary files
exclude = ["references/**", "tests/**", "examples/**", "excel_models/**", "excel_models_private/**"]
