[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frm"
version = "0.0.12"
authors = [
  { name="Shasa Foster", email="shasa.foster@gmail.com" },
]
description = "A python package for quantitative finance and derivative pricing"
readme = "README.md"
requires-python = ">=3.10"
dependencies=[           
    "holidays",
    "matplotlib",	
    "numba",
    "numpy",
    "pandas",	
    "pandas_market_calendars",
    "PrettyTable",
    "pycountry",
    "pytest",
    "scipy",
      ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",  
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shasa/frm"
"Website" = "https://www.frmcalcs.com"

[tool.hatch.build.targets.wheel]
packages = ["frm"]

[tool.hatch.build]
include = ["frm/**", "README.md"]
exclude = ["tests/**", "examples/**", "references/**", "excel_models/**"]

