[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frm"
version = "0.0.34"
authors = [
  { name="Shasa Foster", email="shasa.foster@frmcalcs.com" },
]
description = "A python package for quantitative finance and derivative pricing"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies=[           
	"dill",
	"holidays",
	"matplotlib",
	"numba>=0.60.0",
	"numpy",
	"openpyxl",
	"pandas",
	"PrettyTable",
	"pycountry",
	"pytest",
	"scipy",
	"snakeviz"
      ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",  
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/shasafoster/frm"
"Website" = "https://frmcalcs.com/"

[tool.hatch.build.targets.wheel]
packages = ["frm"]

[tool.hatch.build]
include = ["frm/**", "README.md"]
exclude = ["tests/**", "examples/**", "references/**", "excel_models/**", ".venv/**"]